fixing vbo operation field alignment

--- a/css/contrib.css
+++ b/css/contrib.css
@@ -1064,6 +1064,7 @@ html.js .views-exposed-form .form-item input.throbbing {
 .vbo-views-form .form-item-operation {
   background: transparent url("../images/bg-vbo.png") no-repeat 0 0;
   float: left;
+  margin-top: 9px;
   padding: 2px 10px 0 30px;
 }
 
